syntax = "proto3";

package block;

service Block { 
    rpc GetBlock (BlockRequest) returns (BlockRespone);
}

message BlockRequest { 
    uint64 height = 1;
}

message BlockRespone{ 
    uint64 difficult = 1;
}